    * 3902 FIX: Graph search view: Changing painter options made page empty
    * 3969 FIX: CentOS 5.5: Fixed incompatibility with the available OpenSSL 0.98...
    * 4037 FIX: Fix graphs that have optional metrics...
    * 3973 FIX: Backup: Fixed displaying wrong finish time after backup completion
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3901 Logfile pattern analyser: pattern lists can now be searched
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...
    * 3951 FIX: oracle_sessions: fixed bug with default absolute levels...
    * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...

    Notifications:
    * 3957 mail: now allows extra HTML section between body and table
    * 3972 It's now possible to bulk notifications based on Event console contacts
    * 3900 FIX: Notification analysis: Fixed wrong color for host notification states
    * 3968 FIX: Notifications / Alert handling: Fixed configuring nth notifications without state changes...

    BI:
    * 3955 BI rule ID can now be renamed

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3906 oracle: now version, database creation and startup time, log and open mode, logins, flashback are inventorised
    * 3944 Added OS related information for Cisco, Fireeye and Infoblox devices...
    * 3908 winperf_if, lnx_if: new inventory plugins for switch port statistics of linux and windows hosts
    * 3946 uptime: added the uptime to inventory...


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...