@@ -59,6 +59,7 @@
     * 4037 FIX: Fix graphs that have optional metrics...
     * 3973 FIX: Backup: Fixed displaying wrong finish time after backup completion
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
+    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
 
     WATO:
     * 3915 User access times: New icon when never logged in; New column "last seen"
